--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "tree-sitter-quick-check"
+name = "tree-sitter-qml"
 description = "quick-check grammar for the tree-sitter parsing library"
 version = "0.0.1"
 keywords = ["incremental", "parsing", "quick-check"]
 categories = ["parsing", "text-editors"]
-repository = "https://github.com/tree-sitter/tree-sitter-quick-check"
+repository = "https://github.com/tree-sitter/tree-sitter-qml"
 edition = "2018"
 license = "MIT"
 
